fix: resolve spacing issue in mobile version

--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,9 @@ header {
     justify-content: space-between;
     align-items: center;
     margin-block: 1rem;
+    & div:nth-child(3){
+      margin-right: 1rem;
+    }
   }
   & nav {
     gap: 2rem;
@@ -25,6 +28,9 @@ header {
         gap: 0.5rem;
         font: 700 1rem/1.4 var(--ff-archivo);
         color: var(--text-color-primary);
+      }
+      & div:nth-child(3){
+        margin-right: 0;
       }
     }
     & nav{
